--- a/view/console/console3.html
+++ b/view/console/console3.html
@@ -249,7 +249,7 @@
 			var option = {
 				xAxis: {
 					type: 'category',
-					data: ['天天学习', '较少学习', '很少学习', '学习超长']
+					data: ['学习较多', '学习较少', '学习很少', '学习很多']
 				},
 				yAxis: {
 					
@@ -260,10 +260,10 @@
 						data: [30219, 17998, 16553, 510],
 						type: 'bar'
 					}
-				], title:
-				{
+				], 
+				title:{
 					left: 'center',
-					text: '用户分类'
+					text: '用户学习情况分类'
 				}
 			};
 			var option2 = {
