--- a/component/shujudaping/css/comon0.css
+++ b/component/shujudaping/css/comon0.css
@@ -375,18 +375,18 @@ a:hover {
 
 .wrap li span:nth-child(2),
 .wraptit span:nth-child(2) {
-    width: 20%
+    width: 30%
 }
 
 .wrap li span:nth-child(3),
 .wraptit span:nth-child(3) {
-    width: 20%
+    width: 40%
 }
 
-.wrap li span:nth-child(4),
+/* .wrap li span:nth-child(4),
 .wraptit span:nth-child(4) {
     width: 30%
-}
+} */
 
 .str_wrap {
     overflow: hidden;
@@ -439,6 +439,26 @@ a:hover {
 .str_wrap img {
     max-width: none !important;
 }
+.tooltip::after {  
+    content: attr(data-tooltip); /* 使用自定义的data-tooltip属性 */  
+    position: absolute;  
+    /* top: 100%;  
+    left: 50%;   */
+    transform: translateX(-50%);  
+    padding: 4px 8px;  
+    color: #f8f8f8;  
+    background-color: #333;  
+    border-radius: 4px;  
+    font-size: 14px;  
+    white-space: nowrap;  
+    pointer-events: none;  
+    opacity: 0;  
+    transition: opacity 0.3s;  
+}  
+
+.tooltip:hover::after {  
+    opacity: 1;  
+}  
 
 @keyframes myfirst2 {
     from {
